--- a/README
+++ b/README
@@ -16,7 +16,9 @@ Chinese compatible font such as NSimSun.
 
 == data file format
 
+* test file
 * each line: A,B,C
+* example: aombc,題,0
 * A: cangjie code in lowercase letter
 * B: chinese character
 * C: integer indicates correct count, can be negative
