--- a/TODO
+++ b/TODO
@@ -2,6 +2,19 @@
 
 == next
 
+=== stage 1
+* on exit, save to a new data file
+* on exit, replace the data file
+
+=== stage 2
+* update score
+
+=== stage 3
+* at this point, not using the score yet
+
+== next next
+
+* separate practice round after the test
 * layer the app logic
 * randomize question
 * load db only once at the beginning
