--- a/TODO
+++ b/TODO
@@ -11,6 +11,8 @@
 
 === stage 3
 * at this point, not using the score yet
+* keep scores
+* save scores per run
 
 == next next
 
@@ -18,10 +20,4 @@
 * layer the app logic
 * randomize question
 * load db only once at the beginning
-
-== next next
-
-* keep scores
-* save scores per test
-
 
