--- a/TODO
+++ b/TODO
@@ -1,23 +1,23 @@
-= todo
+= TODO
 
-== next
+== STAGE 1
 
-=== stage 1
 * on exit, save to a new data file
 * on exit, replace the data file
 
-=== stage 2
+== STAGE 2
+
 * update score
 
-=== stage 3
+== STAGE 3
+
 * at this point, not using the score yet
 * keep scores
 * save scores per run
 
-== next next
+== NEXT
 
 * separate practice round after the test
 * layer the app logic
 * randomize question
 * load db only once at the beginning
-
