--- a/TODO
+++ b/TODO
@@ -1,23 +1,19 @@
 = TODO
 
-== STAGE 1
-
-* on exit, save to a new data file
-* on exit, replace the data file
-
 == STAGE 2
 
-* update score
+* update score on each question
+* randomize question
 
 == STAGE 3
 
 * at this point, not using the score yet
-* keep scores
-* save scores per run
+* use the score to select questions
 
 == NEXT
 
+* sort the data file
+* dedup the data file
 * separate practice round after the test
 * layer the app logic
-* randomize question
 * load db only once at the beginning
