--- a/TODO
+++ b/TODO
@@ -1,19 +1,9 @@
 = TODO
 
-== STAGE 2
-
-* [done] update score on each question
-* [done] save score to database
-* [done] remove debug messages
-
-== STAGE 3
-
-* make test() non-destructive
-* at this point, not using the score yet
-
 == STAGE 4
 
 * use the score to select questions
+* use strategy design pattern with trait
 
 == STAGE 5
 
@@ -24,4 +14,4 @@
 == STAGE 6
 
 * CLI option to reset scores
-
+* csv not exists -> create skeleton csv based on hard-coded data
