Fix infinite loop bug

--- a/TODO
+++ b/TODO
@@ -9,6 +9,7 @@
 
 == STAGE 5
 
+* check at least 10 questions
 * sort the data file
 * dedup the data file
 * separate practice round after the test
