--- a/TODO
+++ b/TODO
@@ -1,9 +1,11 @@
 = TODO
 
 == STAGE 8
-* Dedup the data file
-* Dedup test
-* Fix two char same code bug
+* [x] Dedup the data file
+* [x] Dedup test
+* [x] Fix two char same code bug
+* Fix unit test for sort
+* Retain lowest score when dedup
 
 == STAGE 9
 * At the end of each round, ask user continue or quit.
