--- a/TODO
+++ b/TODO
@@ -5,7 +5,8 @@
 * [x] Dedup test
 * [x] Fix two char same code bug
 * [x] Fix unit test for sort
-* Retain lowest score when dedup
+* [x] Retain lowest score when dedup
+* Fix test all tests cj.csv deleted bug
 
 == STAGE 9
 * At the end of each round, ask user continue or quit.
