--- a/TODO
+++ b/TODO
@@ -1,14 +1,16 @@
 = TODO
 
 == STAGE 9
-* add test for create pristine database
-* source control cj0.csv instead of cj.csv
+* [x] add test for create pristine database
 * [x] CSV not exists -> create skeleton csv based on hard-coded data
 * [x] Show a banner on startup
 * [x] show 1/10, 2/10, etc
 * [x] At the end of each round, ask user continue or quit.
+* source control cj0.csv instead of cj.csv
 
 == STAGE 10
+* rename folder unittest to tests
+* source control cj0.csv instead of cj.csv
 * CLI option to reset scores
 * CLI option to set number of questions in a challenge
 * Color highlighting, use text-colorizer crate
