--- a/TODO
+++ b/TODO
@@ -4,13 +4,14 @@
 * [x] rename folder unittest to tests
 * [x] Create data folder if not exists
 * [x] Implement clone trait in struct Character
-* fix duplicate test char bug
-* show score and time prominently after each round
-* CLI option to reset scores
-* CLI option to set number of questions in a challenge
-* Color highlighting, use text-colorizer crate
+* [x] show score and time prominently after each round
 
 == STAGE 11
+* show version number
+* CLI option to reset scores
+* fix duplicate test char bug
+* CLI option to set number of questions in a challenge
+* Color highlighting, use text-colorizer crate
 * keep high score (score+time)
 
 == STAGE NEXT
