--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@
 * provide easier to understanding scoring system
 * evalulate TUI
 x user input allow chinese input method (i.e. continue and quit)
+x reserve zero score for blank new character
 
 == STAGE 12
 * create a new branch for score
