--- a/TODO
+++ b/TODO
@@ -1,14 +1,15 @@
 = TODO
 
 == STAGE 11
-* select chars for better user experience
-* fix duplicate test char bug
+x select chars for better user experience
+x fix duplicate test char bug
 * provide instruction for editing cj data file
 * provide easier to understanding scoring system
 * evalulate TUI
-* build a complete cj database
+x build a complete cj database
 x user input allow chinese input method (i.e. continue and quit)
 x reserve zero score for blank new character
+* upgrade default cj database
 
 == STAGE 12
 * create a new branch for score
